--- a/TimeSet_andorid/app/src/main/res/values/strings.xml
+++ b/TimeSet_andorid/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">主页</string>
-    <string name="menu_setting">设置</string>
-    <string name="menu_personal">个人</string>
+    <string name="menu_home">记录生活</string>
+    <string name="menu_setting">Setting</string>
+    <string name="menu_personal">个人中心</string>
 
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
